@@ -5,6 +5,7 @@ Alpha0.2.2
 - Updated README.md for Github
 - Added '/votejail' cmd, allowing players to vote someone who behaves badly
 - Fixed loading message of compatible economy plugin
+- Fixed /tpjail command and tpJail() not working
 
 Alpha0.2.1
 - Added Russian #5
